아이콘 등록
Signed-off-by: songyi6811 <songyi6811@gmail.com>

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             </nav>
             <div class="icon">
                 <a href="#">
-                    <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
+                    <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
                 </a>
                 <a href="#">
-                    <img src="img/아이콘-회원.png" alt="아이콘-돋보기">
+                    <img src="img/아이콘-회원.png" alt="아이콘-돋보기">
                 </a>
                 <a href="#">
-                    <img src="img/아이콘-하트.png" alt="아이콘-돋보기">
+                    <img src="img/아이콘-하트.png" alt="아이콘-돋보기">
                 </a>
             </div><!-- .icon end -->
         </div><!-- .inner end -->
