이미지 경로 변경
Signed-off-by: songyi6811 <songyi6811@gmail.com>

--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
             <div class="main-img">
                 <img src="img/special-main.png" alt="스페셜 요아정">
             </div><!-- .main-img end -->
-            <img class="sub-img01 sub-img" src="img/우 세모.png" alt="">
-            <img class="sub-img02 sub-img" src="img/우 원형 씨리얼3.png" alt="">
-            <img class="sub-img03 sub-img" src="img/우 원형 씨리얼4.png" alt="">
-            <img class="sub-img04 sub-img" src="img/세모 꿀.png" alt="">
-            <img class="sub-img05 sub-img" src="img/원형 씨리얼 2.png" alt="">
-            <img class="sub-img06 sub-img" src="img/원형 씨리얼.png" alt="">
+            <img class="sub-img01 sub-img" src="img/우 세모.png" alt="">
+            <img class="sub-img02 sub-img" src="img/우 원형 씨리얼3.png" alt="">
+            <img class="sub-img03 sub-img" src="img/우 원형 씨리얼4.png" alt="">
+            <img class="sub-img04 sub-img" src="img/세모 꿀.png" alt="">
+            <img class="sub-img05 sub-img" src="img/원형 씨리얼 2.png" alt="">
+            <img class="sub-img06 sub-img" src="img/원형 씨리얼.png" alt="">
             <img class="sub-img07 sub-img" src="img/Ellipse 1.png" alt="">
             <img class="sub-img08 sub-img" src="img/Ellipse 2.png" alt="">
             <img class="sub-img09 sub-img" src="img/Ellipse 3.png" alt="">
