메인페이지 이미지 변경
Signed-off-by: songyi6811 <songyi6811@gmail.com>

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <section class="main_visual">
-        <img src="img/main_visual-img01.jpg" alt="메인비주얼 배경 이미지">
+        <img src="img/메인비주얼-이미지 (1).jpg" alt="메인비주얼 배경 이미지">
     </section><!-- .main_visual end -->
 
     <section class="best-menu">
