반응형- 테블릿 완성
Signed-off-by: songyi6811 <songyi6811@gmail.com>

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                     <a href="#">
                         <img src="img/event-img01.png" alt="이벤트 이미지01">
                         <p class="coment">
-                            드디어 오늘 11월 18일부터 12월 17일 한 달간 <br>
-                            ‘일리윤과 달달 망고초코쉘, <br>
+                            드디어 오늘 11월 18일부터 12월 17일 한 달간<!--  <br> -->
+                            ‘일리윤과 달달 망고초코쉘, <!-- <br> -->
                             요아정x일리윤 set’를 만날 수 있어요💛
                         </p><!-- .coment end -->
                     </a>
@@ -223,8 +223,8 @@
                     <a href="#">
                         <img src="img/event-img02.png" alt="이벤트 이미지02">
                         <p class="coment">
-                            ✨TWS 아이템으로 꾸며진 <br>
-                            요아정 특별 매장 5곳도 만나보세요! <br>
+                            ✨TWS 아이템으로 꾸며진 <!-- <br> -->
+                            요아정 특별 매장 5곳도 만나보세요!<!--  <br> -->
                             (특별 매장은 추후 스토리로 공지 예정입니다.)
                         </p><!-- .coment end -->
                     </a>
@@ -233,8 +233,8 @@
                     <a href="#">
                         <img src="img/event-img03.png" alt="이벤트 이미지03">
                         <p class="coment">
-                            🍓딸기설렘 이모티콘 EVENT🍓<br>
-                            이제 딸기로 다양한 조합을 만들어 즐길 수 있는<br>
+                            🍓딸기설렘 이모티콘 EVENT🍓<!-- <br> -->
+                            이제 딸기로 다양한 조합을 만들어 즐길 수 있는<!-- <br> -->
                             요아정의 딸기 시즌이 돌아왔어요🍓❄️
                         </p><!-- .coment end -->
                     </a>
@@ -243,8 +243,8 @@
                     <a href="#">
                         <img src="img/event-img04.png" alt="이벤트 이미지04">
                         <p class="coment">
-                            한 달에 5명씩, <br>
-                            매달 요아정의 요링이를 5명씩 뽑아 <br>
+                            한 달에 5명의 요링이들에게, <!-- <br> -->
+                            매달 요아정의 요링이를 5명씩 뽑아 <!-- <br> -->
                             요아정 쿠폰 만원권을 드립니다! 🎁🎄
                         </p><!-- .coment end -->
                     </a>
@@ -260,7 +260,7 @@
         <div class="inner">
             <div class="search_box">
                 <input type="text" placeholder="찾으시는 매장을 검색하세요.">
-                <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
+                <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
             </div><!-- .search_box end -->
         </div><!-- .inner end -->
     </section><!-- .search end -->
