반응형-모바일 1차 업로드
Signed-off-by: songyi6811 <songyi6811@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,36 +13,59 @@
 <body>
     <header class="header">
         <div class="inner">
-            <h1 class="logo">
-                <a href="#">
-                    <img src="img/logo.png" alt="">
-                </a>
-            </h1><!-- .logo end -->
-            <nav class="nav">
-                <ul class="menu">
-                    <li><a href="#">브랜드</a></li>
-                    <li><a href="#">메뉴 & 매장</a></li>
-                    <li><a href="#">창업</a></li>
-                    <li><a href="#">멤버십</a></li>
-                    <li><a href="#">커뮤니티</a></li>
-                </ul>
-            </nav>
-            <div class="icon">
-                <a href="#">
-                    <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
-                </a>
-                <a href="#">
-                    <img src="img/아이콘-회원.png" alt="아이콘-돋보기">
-                </a>
-                <a href="#">
-                    <img src="img/아이콘-하트.png" alt="아이콘-돋보기">
-                </a>
-            </div><!-- .icon end -->
+            <div class="pc">
+                <h1 class="logo">
+                    <a href="#">
+                        <img src="img/logo.png" alt="로고-pc">
+                    </a>
+                </h1><!-- .logo end -->
+                <nav class="nav">
+                    <ul class="menu">
+                        <li><a href="#">브랜드</a></li>
+                        <li><a href="#">메뉴 & 매장</a></li>
+                        <li><a href="#">창업</a></li>
+                        <li><a href="#">멤버십</a></li>
+                        <li><a href="#">커뮤니티</a></li>
+                    </ul>
+                </nav>
+                <div class="icon">
+                    <a href="#">
+                        <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
+                    </a>
+                    <a href="#">
+                        <img src="img/아이콘-회원.png" alt="아이콘-돋보기">
+                    </a>
+                    <a href="#">
+                        <img src="img/아이콘-하트.png" alt="아이콘-돋보기">
+                    </a>
+                </div><!-- .icon end -->
+            </div><!-- .pc end -->
+            <div class="moblie">
+                <div class="menu_icon">
+                    <a href="#"><img src="img/메뉴-아이콘.png" alt="메뉴-아이콘"></a>
+                </div><!-- .menu_icon end -->
+                <h1 class="logo">
+                    <a href="#"><img src="img/mobile-logo.png" alt="로고-mobile"></a>
+                </h1><!-- .logo end -->
+                <div class="icon">
+                    <a href="#">
+                        <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
+                    </a>
+                    <a href="#">
+                        <img src="img/아이콘-회원.png" alt="아이콘-돋보기">
+                    </a>
+                    <a href="#">
+                        <img src="img/아이콘-하트.png" alt="아이콘-돋보기">
+                    </a>
+                </div><!-- .icon end -->
+            </div><!-- .moblie end -->
         </div><!-- .inner end -->
     </header>
 
     <section class="main_visual">
-        <img src="img/main_visual-img01.jpg" alt="메인비주얼 배경 이미지">
+        <img src="img/메인비주얼-이미지 (1).jpg" alt="메인비주얼 배경 이미지01">
+        <img src="img/main_visual-img02.png" alt="메인비주얼 배경 이미지02">
+        <img src="img/main_visual-img03.png" alt="메인비주얼 배경 이미지03">
     </section><!-- .main_visual end -->
 
     <section class="best-menu">
@@ -180,6 +203,7 @@
                     </div><!-- .text_wrap end -->
                 </div><!-- .item end -->
             </div><!-- .item_wrap end -->
+            <div class="button"><button type="button">더보기</button></div>
         </div><!-- .inner end -->
     </section><!-- .interview end -->
 
@@ -191,8 +215,8 @@
                     <a href="#">
                         <img src="img/event-img01.png" alt="이벤트 이미지01">
                         <p class="coment">
-                            드디어 오늘 11월 18일부터 12월 17일 한 달간 <br>
-                            ‘일리윤과 달달 망고초코쉘, <br>
+                            드디어 오늘 11월 18일부터 12월 17일 한 달간<!--  <br> -->
+                            ‘일리윤과 달달 망고초코쉘, <!-- <br> -->
                             요아정x일리윤 set’를 만날 수 있어요💛
                         </p><!-- .coment end -->
                     </a>
@@ -201,8 +225,8 @@
                     <a href="#">
                         <img src="img/event-img02.png" alt="이벤트 이미지02">
                         <p class="coment">
-                            ✨TWS 아이템으로 꾸며진 <br>
-                            요아정 특별 매장 5곳도 만나보세요! <br>
+                            ✨TWS 아이템으로 꾸며진 <!-- <br> -->
+                            요아정 특별 매장 5곳도 만나보세요!<!--  <br> -->
                             (특별 매장은 추후 스토리로 공지 예정입니다.)
                         </p><!-- .coment end -->
                     </a>
@@ -211,8 +235,8 @@
                     <a href="#">
                         <img src="img/event-img03.png" alt="이벤트 이미지03">
                         <p class="coment">
-                            🍓딸기설렘 이모티콘 EVENT🍓<br>
-                            이제 딸기로 다양한 조합을 만들어 즐길 수 있는<br>
+                            🍓딸기설렘 이모티콘 EVENT🍓<!-- <br> -->
+                            이제 딸기로 다양한 조합을 만들어 즐길 수 있는<!-- <br> -->
                             요아정의 딸기 시즌이 돌아왔어요🍓❄️
                         </p><!-- .coment end -->
                     </a>
@@ -221,8 +245,8 @@
                     <a href="#">
                         <img src="img/event-img04.png" alt="이벤트 이미지04">
                         <p class="coment">
-                            한 달에 5명씩, <br>
-                            매달 요아정의 요링이를 5명씩 뽑아 <br>
+                            한 달에 5명의 요링이들에게, <!-- <br> -->
+                            매달 요아정의 요링이를 5명씩 뽑아 <!-- <br> -->
                             요아정 쿠폰 만원권을 드립니다! 🎁🎄
                         </p><!-- .coment end -->
                     </a>
@@ -238,7 +262,7 @@
         <div class="inner">
             <div class="search_box">
                 <input type="text" placeholder="찾으시는 매장을 검색하세요.">
-                <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
+                <img src="img/아이콘-돋보기.png" alt="아이콘-돋보기">
             </div><!-- .search_box end -->
         </div><!-- .inner end -->
     </section><!-- .search end -->
